k8s/deployment.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: worker

spec:
    replicas: 1
    serviceName: worker
    selector:
        matchLabels:
            app: worker
    template:
        metadata:
            labels:
                app: worker
        spec:
            imagePullSecrets:
                - name: github
            containers:
                - name: worker
                  image: "{image}"
                  resources:
                      requests:
                          memory: "10Gi"
                          cpu: "3"
                      limits:
                          memory: "10Gi"
                          cpu: "3"
