k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - bluehook-worker-dedi.astrid.place
    secretName: domain-tls
  rules:
  - host: bluehook-worker-dedi.astrid.place
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: worker
            port:
              number: 6969
